--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         
     },
     "scripts": {
-        
+        "tailwind": "npx tailwindcss -i ./src/input.css -o ./build/assets/css/output.css --watch"
     },
     "devDependencies": {
         "tailwindcss": "^3.4.3"
